--- a/week1/youtube/week1yt.css
+++ b/week1/youtube/week1yt.css
@@ -113,7 +113,49 @@ body {
   margin-bottom: 20px;
 }
 
-#phone-text {
-  font-size: 20px;
-  margin: 10px;
+.option {
+  padding: 10px 20px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  margin: 40px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.option:hover {
+  background-color: #ccc;
+}
+
+#computer {
+  position: absolute;
+  top: 20%;
+  left: calc(50% - 375px);
+}
+
+#computer .computer-img {
+  width: 750px;
+}
+
+#computer .youtube-logo {
+  width: 200px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  margin: 15px;
+}
+
+#computer #computer-text {
+  width: 200px;
+  position: absolute;
+  top: 75px;
+  margin: 15px;
+  font-size: 100px;
+  left: 40%;
+}
+
+.video {
+  position: absolute;
+  height: 150px;
+  top: 50px;
+  left: 0px;
 }
