--- a/frontend/src/static/css/Happiness.css
+++ b/frontend/src/static/css/Happiness.css
@@ -4,6 +4,7 @@
   background-color: #f0f0f0;
   border-radius: 5px;
   overflow: hidden;
+  z-index: 1;
 }
 
 #happiness-title {
@@ -22,6 +23,7 @@
   height: 100%;
   transition: width 0.3s ease-in-out;
   transition: background-color 0.5s ease-in-out;
+  z-index: inherit;
 }
 
 .low {
