--- a/frontend/src/static/css/Window.css
+++ b/frontend/src/static/css/Window.css
@@ -2,29 +2,35 @@
   position: absolute;
   width: 400px;
   height: 400px;
-  background-color: #9cdffa;
-  border: 1px solid #402f1d;
-
+  background-color: #f0f8ff;
+  border: 10px solid #402f1d;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 10px;
 }
 
-.window::before,
-.window::after {
-  content: "";
-  position: absolute;
-  background-color: #554029;
+.pane {
+  background-color: #9cdffa;
+  border: 2px solid #402f1d;
+  border-radius: 5px;
 }
 
-.window::before {
-  width: 1px; /* Vertical line */
-  height: 100%;
-  top: 0;
-  left: 50%; /* Adjust left position for vertical line */
+.pane.top-left {
+  grid-area: 1 / 1 / 2 / 2;
 }
 
-.window::after {
-  width: 100%; /* Horizontal line */
-  height: 1px;
-  top: 50%; /* Adjust top position for horizontal line */
-  left: 0;
+.pane.top-right {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.pane.bottom-left {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.pane.bottom-right {
+  grid-area: 2 / 2 / 3 / 3;
 }
