--- a/frontend/src/static/css/Border.css
+++ b/frontend/src/static/css/Border.css
@@ -4,7 +4,7 @@
   margin: 10px;
   border: 5px solid black;
   border-radius: 15px;
-  padding: 20px;
+  /* padding: 20px; */
   box-sizing: border-box;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
   position: relative;
