--- a/frontend/src/static/css/Popup.css
+++ b/frontend/src/static/css/Popup.css
@@ -1,15 +1,18 @@
 .popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
+  position: absolute; /* or absolute */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
   max-width: 400px;
   background: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 20px;
   z-index: 1000;
+
+  /* Centering */
+  margin: auto;
 }
 
 .popup-inner {
